--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,7 +9,7 @@
     "com.unity.polybrush": "1.0.1",
     "com.unity.render-pipelines.high-definition": "8.2.0",
     "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "3.0.0-preview.1",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.3.4",
     "com.unity.ugui": "1.0.0",
     "com.vladfaust.unitywakatime": "https://github.com/vladfaust/unity-wakatime.git#package",
